--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -70,6 +70,9 @@ body {
     margin-right: 0px;
     padding: 0px;
 }
+.carousel-inner {
+    border-radius: 10px;
+}
 .carousel-inner img {
     width: 100%;
     height: 100%;
